more tweaks of the natural deduction proof system for sentential

--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -252,6 +252,12 @@ An argument that makes use of both patterns of arbitrary reasoning is this examp
 	\have{c}{\forall y \exists x Lxy}\Ee{a,b-d}
 \end{proof} At line 3, both our arbitrary names are in play – $h$ was newly introduced to the proof in line 2 as the arbitrary person Hiccup who witnesses the truth of `$\exists x \forall y Lxy$', and `$a$' at line 3 as an arbitrary person Astrid beloved by Hiccup. We can apply $\exists$I without restriction at line 4, which takes the name `$h$' out of the picture – we no longer rely on the specific instance chosen, since we are back at generalities about someone who loves everyone, being such that they also love the arbitrarily chosen someone Astrid. So we can safely apply $\forall$I at line 5, since the name `$a$' appears in no assumption nor in `$\forall y\exists x Lxy$'. But now we have at line 5 a claim that doesn't involve the arbitrary name `$h$' either, which was newly chosen to not be in any undischarged assumption or in $\exists x \forall y Lxy$. So we can safely say that the name Hiccup was just arbitrary, and nothing in the proof of `$\forall y\exists x Lxy$' depended on it, so we can discharge the specific assumption about $h$ that was used in the course of that proof and nevertheless retain our entitled ment to `$\forall y\exists x Lxy$'. 
 
+\subsection{The barber}
+
+Let's try something a little more complicated, the so-called `Barber paradox': \begin{quote}
+	 in a certain remote Sicilian village, approached by a long ascent up a precipitous mountain road, the barber shaves all and only those villagers who do not shave themselves. Who shaves the barber? If he himself does, then he does not (since he shaves only those who do not shave themselves); if he does not, then he indeed does (since he shaves all those who do not shave themselves).  The unacceptable supposition is that there is such a barber – one who shaves himself if and only if he does not. The story may have sounded acceptable: it turned our minds, agreeably enough, to the mountains of inland Sicily. However, once we see what the consequences are, we realize that the story cannot be true: there cannot be such a barber, or such a village. The story is unacceptable.\footnote{R M Sainsbury (2009) \emph{Paradoxes} 3rd ed., Cambridge University Press, pages 1–2.}
+\end{quote} This uses some of our tricky quantifer rules, disjunction elimination (proof by cases) and negation introduction (\emph{reductio}), so it is really a showcase of many things we've learned so far. 
+
 \section{Justification of these quantifier rules}
 
 Above, I offered informal arguments for each of our quantifier rules that seem to exemplify the pattern of argument in the rule, and to be intuitively valid. But we can also offer justifications for our rules in terms of interpretations of the sentences involved, and the principles governing truth of quantified sentences introduced in §\ref{fol.truth.quant}. 
